--- a/docs/Rules Reference Guide.adoc
+++ b/docs/Rules Reference Guide.adoc
@@ -218,137 +218,87 @@ PHOENIX CLAN
 SCORPION CLAN
 UNICORN CLAN
 
+=== Composure
+Composure is a variable keyword ability. A card with this keyword gains an additional ability while its controller's honor bid is lower than that of one of his or her opponents.
+
+- Most uses of the composure keyword grant a constant ability that modifies a character's skills or glory. Some may grant triggered abilities that can only be used while a player has composure.
+
+- "You have composure" is the phrase indicating that a player's composure keyword is active. It is used in reminder text to indicate that a player's card has the ability granted by composure while their honor bid is lower than an opponent's.
+
+=== Conflict
+During the conflict phase, each player has two opportunities to declare a conflict against an opponent. For the rules on how to resolve conflicts, see Framework Details.
+
+=== Conflict (Conflict Action, Conflict Reaction,Conflict Interrupt), Triggered Conflict Ability
+
+If a triggered ability is preceded by the modifier "Conflict", that ability can only be triggered during a conflict. It functions as a shorthand for the following triggering conditions:
+
+- On events, provinces, strongholds and holdings "Conflict X:" replaces "X: During a conflict, ..."
+
+- On characters "Conflict X:" replaces "X: During a conflict in which this character is participating, ..."
+
+- On attachments "Conflict X:" replaces "X: During a conflict in which attached character is participating, ..."
+
+- If a Triggered Conflict Ability can only be triggered in a conflict of a specific type, the boldface timing command is preceded by the [military] or [political] symbols, respectively. +
+*Example:* _A character has the ability "*Conflict Action:* Pay 1 fate - ready this character." This is equivalent to "*Action:* During a  conflict in which this character is participating, pay 1 fate - ready this character."_
+
+- If a card's remaining triggering conditions directly contradict parts of this replacement, the card's text takes precedence. +
+*Example:* _The attachment Stinger (Through the Mists 34) has the ability "*Conflict Action:* While this card is in your hand, choose an attacking character and lose 1 honor - ...". Because Stinger has to be in your hand in order to trigger its ability, it does not have an attached character. In this case, the "*Conflict Action:*" is interpreted as "*Action:* During a conflict, ..." instead of "*Action:* During a conflict in which attached character is participating, ..."_
+
+- If a player is instructed to resolve a Triggered Conflict Ability on a character, the triggering conditions above must still be met. This means that the character must be participating in a conflict of the right type (if specified).
+
+=== Conflicts at Multiple Provinces
+When a conflict is at multiple provinces, each of those provinces is the "attacked province" and abilities that interact with the conflict being at those provinces can be used.
+
+During the resolution of a conflict at multiple provinces, compare the attacking player's excess skill against the strength of each attacked province separately to determine if that province is broken.
+
+- Any card ability that interacts with "the attacked province" interacts with one (not both) of those provinces. 
+
+=== Constant Abilities
+A constant ability is any non-keyword ability whose text contains no boldface timing trigger defining its ability type. A constant ability becomes active as soon as its card enters play and remains active while the card is in play.
+
+- Some constant abilities continuously seek a specific condition (denoted by words such as "during," "if," or "while"). The effects of such abilities are active any time the specified condition is met.
+
+- If multiple instances of the same constant ability are in play, each instance affects the game state independently.
+
+- If a constant ability would cause a card to leave play, interrupt abilities cannot be used to replace or prevent that constant ability.
+
+=== Control and Ownership
+A card's owner is the player who included the card as a part of his or her deck (i.e., dynasty deck, conflict deck, provinces, stronghold, role) at the beginning of the game.
+
+- By default, cards enter play under their owner's control. Some abilities may cause cards to change control during a game.
+
+- A player controls the cards in his or her out-of-play game areas (such as the hand, the dynasty and conflict decks, and the dynasty and conflict discard piles).
+
+- If a card would enter an out-of-play area of a player who does not own the card, the card is placed in its owner's equivalent out-of-play area instead. (For all associated card ability and  framework effect purposes, the card is considered to have entered that opponent's out-of-play area, and only the physical placement of the card is adjusted.)
+
+- If a participating character changes control during a conflict, it is considered participating in the same conflict on the side of its new controller.
+
+- When a character changes control while it is in play, it remains in the same state as it was before (i.e., bowed or ready, participating or at home, etc.), and is now under the new player's control.
+
+- Attachments on a card that changes control do not themselves change control.
+
+- Unless a duration is specified, a control change persists as long as the card remains in play.
+
+=== Copy (of a card)
+
+A copy of a card is defined by title: any other card that shares the same title is considered a copy, regardless of card type, text, deck of origin, artwork, or any other characteristic(s) of the card(s).
+
+- A card is considered to be a copy of itself, as it shares its own title.
+
+=== Copy (of a character)
+Some card abilities may cause a character to become a copy of another character. When that happens, the character that is changing loses its name, cost, base skills and glory, traits, clan affiliation, and ability text. It gains the name, cost, base skills and glory, traits, clan affiliation, and ability text of the copied character for the duration indicated by the card ability.
+
+- Cards that refer to a character's printed text (skills, traits, abilities, etc.) still refer to the text physically printed on the card.
+
+- When a character becomes a copy of another character, only the base skills and printed characteristics are copied. If the character that is changing gains characteristics (such as traits or ability text) from another non-copy card ability (such as an event or attachment) then those characteristics are not lost.
+
+- A character can only become a copy of a unique character if its owner and/or controller does not also own or control a copy (by title) of that unique character.
+
+- Becoming a copy of another character replaces the character's base skills and glory. This is not applying a modifier (dashes can be replaced).
+
+- A character cannot become a copy of another character if both characters have the same title.
+
 [-WORKING ENTRY POINT-] +
-Composure
-Composure is a variable keyword ability. A card with this keyword
-gains an additional ability while its controller's honor bid is lower
-than that of one of his or her opponents.
-Most uses of the composure keyword grant a constant ability
-that modifies a character's skills or glory. Some may grant
-triggered abilities that can only be used while a player has
-composure.
-"You have composure" is the phrase indicating that a player's
-composure keyword is active. It is used in reminder text to
-indicate that a player's card has the ability granted by
-composure while their honor bid is lower than an opponent's.
-Conflict
-During the conflict phase, each player has two opportunities to
-declare a conflict against an opponent. For the rules on how to
-resolve conflicts, see Framework Details.
-Conflict (Conflict Action, Conflict Reaction,
-Conflict Interrupt), Triggered Conflict Ability
-If a triggered ability is preceded by the modifier "Conflict", that
-ability can only be triggered during a conflict. It functions as a
-shorthand for the following triggering conditions:
-On events, provinces, strongholds and holdings "Conflict X:"
-replaces "X: During a conflict, ..."
-On characters "Conflict X:" replaces "X: During a conflict in
-which this character is participating, ..."
-On attachments "Conflict X:" replaces "X: During a conflict in
-which attached character is participating, ..."
-If a Triggered Conflict Ability can only be triggered in a conflict
-of a specific type, the boldface timing command is preceded by
-the or symbols, respectively.
-
-Example: A character has the ability " Conflict Action: Pay 1
-fate - ready this character." This is equivalent to "Action: During
-a conflict in which this character is participating, pay 1 fate
-- ready this character."
-If a card's remaining triggering conditions directly contradict
-parts of this replacement, the card's text takes precedence.
-Example: The attachment Stinger (Through the Mists 34) has
-the ability " Conflict Action: While this card is in your hand,
-choose an attacking character and lose 1 honor - ...". Because
-Stinger has to be in your hand in order to trigger its ability, it
-does not have an attached character. In this case, the "
-Conflict Action:" is interpreted as "Action: During a conflict,
-..." instead of "Action: During a conflict in which attached
-character is participating, ..."
-If a player is instructed to resolve a Triggered Conflict Ability on
-a character, the triggering conditions above must still be met.
-This means that the character must be participating in a
-conflict of the right type (if specified).
-Conflicts at Multiple Provinces
-When a conflict is at multiple provinces, each of those provinces is
-the "attacked province" and abilities that interact with the conflict
-being at those provinces can be used.
-During the resolution of a conflict at multiple provinces, compare
-the attacking player's excess skill against the strength of each
-attacked province separately to determine if that province is
-broken.
-Any card ability that interacts with "the attacked province"
-interacts with one (not both) of those provinces.
-Constant Abilities
-A constant ability is any non-keyword ability whose text contains
-no boldface timing trigger defining its ability type. A constant
-ability becomes active as soon as its card enters play and remains
-active while the card is in play.
-Some constant abilities continuously seek a specific condition
-(denoted by words such as "during," "if," or "while"). The
-effects of such abilities are active any time the specified
-condition is met.
-If multiple instances of the same constant ability are in play,
-each instance affects the game state independently.
-If a constant ability would cause a card to leave play, interrupt
-abilities cannot be used to replace or prevent that constant
-ability.
-Control and Ownership
-A card's owner is the player who included the card as a part of his
-or her deck (i.e., dynasty deck, conflict deck, provinces, stronghold,
-role) at the beginning of the game.
-By default, cards enter play under their owner's control. Some
-abilities may cause cards to change control during a game.
-A player controls the cards in his or her out-of-play game areas
-(such as the hand, the dynasty and conflict decks, and the
-dynasty and conflict discard piles).
-If a card would enter an out-of-play area of a player who does
-not own the card, the card is placed in its owner's equivalent
-out-of-play area instead. (For all associated card ability and
-
-8
-framework effect purposes, the card is considered to have
-entered that opponent's out-of-play area, and only the physical
-placement of the card is adjusted.)
-If a participating character changes control during a conflict, it
-is considered participating in the same conflict on the side of
-its new controller.
-When a character changes control while it is in play, it remains
-in the same state as it was before (i.e., bowed or ready,
-participating or at home, etc.), and is now under the new
-player's control.
-Attachments on a card that changes control do not themselves
-change control.
-Unless a duration is specified, a control change persists as long
-as the card remains in play.
-Copy (of a card)
-A copy of a card is defined by title: any other card that shares the
-same title is considered a copy, regardless of card type, text, deck
-of origin, artwork, or any other characteristic(s) of the card(s).
-A card is considered to be a copy of itself, as it shares its own
-title.
-Copy (of a character)
-Some card abilities may cause a character to become a copy of
-another character. When that happens, the character that is
-changing loses its name, cost, base skills and glory, traits, clan
-affiliation, and ability text. It gains the name, cost, base skills and
-glory, traits, clan affiliation, and ability text of the copied character
-for the duration indicated by the card ability.
-Cards that refer to a character's printed text (skills, traits,
-abilities, etc.) still refer to the text physically printed on the
-card.
-When a character becomes a copy of another character, only
-the base skills and printed characteristics are copied. If the
-character that is changing gains characteristics (such as traits
-or ability text) from another non-copy card ability (such as an
-event or attachment) then those characteristics are not lost.
-A character can only become a copy of a unique character if its
-owner and/or controller does not also own or control a copy
-(by title) of that unique character.
-Becoming a copy of another character replaces the character's
-base skills and glory. This is not applying a modifier (dashes can
-be replaced).
-A character cannot become a copy of another character if both
-characters have the same title.
 Corrupted
 Corrupted is a keyword ability. A character with the corrupted
 keyword enters play tainted. Abilities cannot be triggered from a
